--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,31 @@
 body{
-    background: #ed9b9b;
+    background: white;
 }
 h1{
     color: rgb(0, 0, 0);
 }
 #bg{ 
-    background: url(https://images.unsplash.com/photo-1555284023-249222086985?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3300&q=80);
-    background-position: 0px -600px;
+    background: url(../images/trvl.png);
+    background-position: center;
+    padding-bottom: 500px;
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 #btn-submit{
     text-align: center;
 }
+
+.form-control{
+    border-top-color: white;
+    border-left-color: white;
+    border-right-color: white;
+    text-align: center;
+}
+
+#btn-submit{
+    display: block;
+    margin: 0 auto;
+    background-color: white;
+}
+    
