--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@ h1{
 }
 #bg{ 
     background: url(../images/trvl.png);
-    background-position: center;
+    background-position: absolute;
     padding-bottom: 700px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,5 +32,4 @@ h1{
     text-align: center;
     font-size: 20px;
 }
-
 
