--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,6 +49,7 @@ h1{
     font-family: 'Bevan';
     font-size: 35px;
     color: #575b59;
+    margin-top: 30px;
 }
 
 
@@ -62,3 +63,7 @@ h1{
     color: rgb(44, 124, 167);
     font-size: 40px;
 }
+#Cweather{
+    
+}
+
