--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,11 +11,20 @@ h1{
     color: rgb(0, 0, 0);
 }
 #bg{ 
-    background: url(../images/trvl.png);
-    background-position: absolute;
-    padding-bottom: 700px;
-    background-repeat: no-repeat;
-    background-size: cover;
+    max-width: 500px;
+    padding-bottom: 200px;
+    padding-top: 50px;
+    margin: 0 auto;
+
+   
+   
+}
+
+.globe{
+    margin: 0 auto;
+    width: 100%;
+    background-size: auto;
+    height: auto;
 
 }
 #btn-submit{
