--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,29 +71,34 @@ h1{
     color: red;
     padding: 10px;
 }
+#prev{
+    background-color: rgb(41, 164, 209);
+}
 
 #weather-here{
     font-family: 'Bevan';
     font-size: 35px;
     color: #575b59;
     margin-top: 30px;
+    background-color: rgb(25, 155, 77);
 }
 
 
 #dump-pic-here{
-   
     align-content: center;
     justify-content: center;
+    background-color: rgb(187, 51, 51);
     
+}
+#dump-outdoor-here{
+    background-color: rgb(110, 54, 184);
 }
 .i{
     color: rgb(44, 124, 167);
     font-size: 40px;
 }
 
-footer{
-    width: 100%;
-}
+
 
 @media only screen and ( max-width: 760px){
 
