--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,6 +22,19 @@ h1{
     left:0;   
 }
 
+#destination{
+    overflow: visible;
+}
+#info{
+    display: block;
+    margin: 0 auto;
+   
+}
+
+i{
+    font-family: 'Quicksand','Fredoka One', 'Bevan', sans-serif;
+}
+
 #allLetters{
     margin: 0 auto;
     width: 100%;
@@ -43,7 +56,31 @@ h1{
     z-index: 1;
 } 
 
+#prevSearch{
+    font-size: 22px;
+    text-align: left;
+    color: darkgray;
+}
 
+tr{
+    float: left;
+   
+}
+
+#tripName{
+    text-align: center;
+    margin: 80px 0 0 0;
+}
+
+.tripRow{
+  
+    display: block;
+   
+}
+
+#dotOnLoad{
+    margin: 0 auto;
+}
 
 #btn-submit{
     text-align: center;
@@ -56,7 +93,9 @@ h1{
     font-size: 20px
 }
 
-
+.card-body{
+    margin-left: 50px;
+}
 .form-control{
     border-top-color: white;
     border-left-color: white;
@@ -65,11 +104,22 @@ h1{
     font-size: 20px;
 }
 
-#delete-button{
+.delete-button{
     margin: auto;
     color: rgba(0,0,0,.03);
-    color: red;
+    color: darkgray;
+    background-color: white;
     padding: 10px;
+    float: right;
+    display: inline;
+}
+
+td{
+    color: darkgray;
+}
+
+.table thead th{
+border-bottom: 2px solid white;
 }
 
 #weather-here{
@@ -91,8 +141,12 @@ h1{
     font-size: 40px;
 }
 
-footer{
-    width: 100%;
+.footer___28juC {
+
+    color:white !important; 
+}
+.footer___28juC a {
+    color:white !important;
 }
 
 @media only screen and ( max-width: 760px){
